tests/invalid/for_zip_unpack_wrong_arg_count/main.py
def run_case() -> None:
    for a, b in zip([1, 2]):
        print(a + b)

if __name__ == "__main__":
    run_case()
